cabal-version:      3.4
name:               maze
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Kirill Andreev
maintainer:         hindmost.one@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -threaded -O3 -fmax-simplifier-iterations=20 -fsimplifier-phases=3 -fno-liberate-case -funfolding-use-threshold1000 -fllvm -optlo-O3
    build-depends:    base ^>=4.18.2.1,
                      array,
                      containers,
                      data-default,
                      data-interval,
                      gloss-raster,
                      gloss,
                      lens,
                      mtl,
                      pretty-terminal,
                      transformers,
                      gloss-juicy,
                      unordered-containers,
                      hashable,

library
    import:           warnings
    exposed-modules:  Circle,
                      Color,
                      Dir,
                      Distance,
                      Global,
                      IsPoint,
                      Local,
                      Point,
                      Queue,
                      Shadow,
                      Shadowcasting,
                      Vec,
                      Visibility,
    -- other-modules:
    -- other-extensions:
    hs-source-dirs:   src
    default-language: GHC2021

executable maze
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    maze,

    hs-source-dirs:   app
    default-language: GHC2021
